[tool.poetry]
name = "insighturl"
version = "0.1.0"
description = "AI-powered web Q&A tool that extracts and answers questions strictly from provided URLs using RAG"
authors = ["Sathvika-891 <n171254@rguktn.ac.in>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.3.18"
langchain-community = "^0.3.17"
langchain-together = "^0.3.0"
langchain-huggingface = "^0.1.2"
unstructured = "^0.16.20"
python-dotenv = "^1.0.1"
streamlit = "^1.42.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
